fix bug in chrome on macosx (dragging elements not possible when pdf preview tab is visible)

--- a/src/main.css
+++ b/src/main.css
@@ -520,8 +520,8 @@ ul ul .rbroMenuItemText {
 .rbroDocumentPreview {
     height: calc(100% - 50px);
     width: 100%;
-    position: relative;
-    top: 0;
+    position: absolute;
+    top: 45px;
     left: 0;
     z-index: -1;
 }
